# PyMaze

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/processor/: __init__.py  image_reader.py  maze_utils.py  solver.py
