[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "PyMaze"
version = "0.0.1"
requires-python = ">=3.13"
description = "A simple 2d maze solver script."
readme = "README.md"
license = "MIT"
dependencies = []
authors = [
    {name = "Liam C. Bull", email = "liam@lcb-dev.biz"}
]
maintainers = [
    {name = "Liam C. Bull", email = "liam@lcb-dev.biz"}
]

[project.scripts] 
pymaze = "src.main:main"

[tool.hatch.build]
include = ["src/**/*.py"]
exclude = ["tests/*"]